--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
      <title>My Resume</title>
 </head>
 <body>
+     
+     <img src="./assets/e753d210ec92dbb0572b06c625bf665a.jpg" height="100" alt="Profile Photo"/><br/>
      <h1>My Resume</h1>
      <hr/>
      <h2>Summary</h2>
@@ -18,9 +20,9 @@
           </p>
      <h2>Education</h2>
      <ol>
-          <li>12th from St.stephens School</li>
-          <li>Bca From Ignou</li>
-          <li>Japanese From Mosai</li>
+          <li>NON-Med(St.Stephens school)</li>
+          <li>BCA</li>
+          <li>Japanese(Mosai)</li>
      </ol>
      <h2>Skills</h2>
      <ul>
@@ -33,7 +35,7 @@
           <li>Problem Solving: Strong analytical and problem-solving skills developed through academic projects and self-study.</li>
           <li>Project Management: Organized and detail-oriented with a track record of completing self-initiated web development projects.</li>
      </ul>
-     <h2>certification</h2>
+     <h2>Certification</h2>
      <ul>
           <li>JLPT N2</li>
           <li>SQL</li>
@@ -42,8 +44,8 @@
           <li>Full Stack Web Development</li>
      </ul>
      <hr/>
-     <img src="./assets/e753d210ec92dbb0572b06c625bf665a.jpg" height="100" alt="Profile Photo"/><br/>
-     <a href="./public/Hobbies.html">Hobbies and Interests</a>
+     <a href="./public/Hobbies.html">Hobbies</a>
+     <br/>
      <a href="./public/Contact.html">Contact Me</a>
      <footer>
           <p>© 2023 Shubham</p>
